...
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_temp">Start</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>

    <string name="action_logout">Logout</string>
    <string name="desc_urgency">How soon:</string>
    <string name="desc_severity">How severe:</string>
    <string name="desc_certainty">How likely:</string>
    <string name="expires_text">Expires:</string>
    <string name="effective_text">Effective:</string>
    <string name="local_service_started">Service Started Text from Res</string>
...
